resubiendo gigeo app a mis repositorios

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <h4 class="titulo">Videos populares</h2>
                     <div class="card__deck d-flex">
                         <!-- VIDEO 1 -->
-                        <div class="card col-xs-12">
+                        <div class="card col-12 col-md-3">
                             <img src="assets/images/image-1.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <p class="card-text">Después de la vela- Yuki Mukami</p>
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                         <!-- VIDEO 2 -->
-                        <div class="card">
+                        <div class="card col-12 col-md-3">
                             <img src="assets/images/image-2.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <p class="card-text">Far Away- Yuki Mukami</p>
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                         <!-- VIDEO 3 -->
-                        <div class="card">
+                        <div class="card col-12 col-md-3">
                             <img src="assets/images/image-3.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <p class="card-text">City- Yuki Mukami</p>
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                         <!-- VIDEO 4 -->
-                        <div class="card">
+                        <div class="card col-12 col-md-3">
                             <img src="assets/images/image-4.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <p class="card-text">A Yuki Tale- Yuki Mukami</p>
@@ -120,7 +120,7 @@
                             </div>
                         </div>
                         <!-- VIDEO 5 -->
-                        <div class="card">
+                        <div class="card col-12 col-md-3">
                             <img src="assets/images/image-5.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <p class="card-text">Mapocho- Yuki Mukami</p>
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <!-- VIDEO 6 -->
-                        <div class="card">
+                        <div class="card col-12 col-md-3">
                             <img src="assets/images/image-6.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <p class="card-text">Lucky Days- Yuki Mukami</p>
@@ -136,7 +136,7 @@
                             </div>
                         </div>
                         <!-- VIDEO 7 -->
-                        <div class="card">
+                        <div class="card col-12 col-md-3">
                             <img src="assets/images/image-7.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <p class="card-text">30 days in My House</p>
@@ -144,7 +144,7 @@
                             </div>
                         </div>
                         <!-- VIDEO 8 -->
-                        <div class="card">
+                        <div class="card col-12 col-md-3">
                             <img src="assets/images/image-8.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <p class="card-text">Santiago- Yuki Mukami</p>
